--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+## [1.1.1]
+
+### Added
+ * Add 4.1.2 and 4.1.3 to release matrix
+
 ## [1.1.0]
 
 ### Added
@@ -32,5 +37,6 @@ Initial Release
         * 4.1.1 stable
 
 [unreleased]: https://github.com/witchpixels/godot4-3d-omnibuilder/compare/v1.1.0...HEAD
+[1.1.1]: https://github.com/witchpixels/godot4-3d-omnibuilder/compare/v1.0.1...v1.1.1
 [1.1.0]: https://github.com/witchpixels/godot4-3d-omnibuilder/compare/v1.0.0...v1.1.0
 [1.0.0]: https://github.com/witchpixels/godot4-3d-omnibuilder/releases/tag/v1.0.0
