--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,15 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [2.0.0]
+### Added
+ * Support for Godot 4.3
+
+### Removed
+ * Support for previous version of Godot from this version onwards
+ * fbx2gltf is no longer installed as part of the container as it is redundant in godot 4.3
+
+
 ## [1.2.2]
 ### Changed
  * Update blender verison to 4.2 in perparation for Godot 4.3
@@ -51,6 +60,7 @@ Initial Release
         * 4.0.3 stable
         * 4.1.1 stable
 
+[2.0.0]: https://github.com/witchpixels/godot4-3d-omnibuilder/compare/v1.2.2...v2.0.0
 [1.2.2]: https://github.com/witchpixels/godot4-3d-omnibuilder/compare/v1.2.1...v1.2.2
 [1.2.1]: https://github.com/witchpixels/godot4-3d-omnibuilder/compare/v1.2.0...v1.2.1
 [1.2.0]: https://github.com/witchpixels/godot4-3d-omnibuilder/compare/v1.1.1...v1.2.0
